# sothr-hands-on

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
crates/sotrh/: Cargo.toml
crates/sotrh/src/: main.rs
crates/sotrh/src/lib/: state.rs
src/lib/: lib.rs  state.rs
src/lib/shaders/: shader.wgsl
src/sotrh/src/lib/: lib.rs  state.rs
web/: index.html  index.js
web/sotrh/: index.html  index.js
