[package]
name = "wgpu-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wgpu-demo"
path = "src/bin/main.rs"

[lib]
name = "demolib"
crate-type = ["cdylib", "rlib"]
path = "src/lib/lib.rs"

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.10.0"
log = "0.4.20"
winit = "0.28.7"
wgpu = "0.17.1"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.17.1", features = ["webgl"]}
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Element",
]}
